--- a/views/games/oneGame.hbs
+++ b/views/games/oneGame.hbs
@@ -21,22 +21,29 @@
                     <p> ADD TO COLLECTION</p>
                 </div>
                 
-                {{!-- <form class="status-list" method="POST" action="/games/{{game._id}}"> --}}
-                <div class="status-list">
+                <div class="status-list is-hidden">
                     <div> 
                         <input class="game-status currentPlay" data-game-id ={{game._id}} type="checkbox" name="currentPlay" value="currentPlay" id="currentPlay">
                         <label for="currentPlay">Currently playing</label>
+                        {{#if currentPlay}}
+                            <img src="/images/checked-icon.svg" alt="">
+                        {{/if}}
                     </div>
                     <div>
                         <input class="game-status alreadyPlayed" data-game-id ={{game._id}} type="checkbox" name="alreadyPlayed" value="alreadyPlayed" id="alreadyPlayed">
                         <label for="alreadyPlayed">Completed</label>
+                        {{#if alreadyPlayed}}
+                            <img src="/images/checked-icon.svg" alt="">
+                        {{/if}}
                     </div>
                     <div>
                         <input class="game-status wantToPlay" data-game-id ={{game._id}} type="checkbox" name="wantToPlay" value="wantToPlay" id="wantToPlay">
                         <label for="wantToPlay">Want to play</label>
+                        {{#if wantToPlay}}
+                            <img src="/images/checked-icon.svg" alt="">
+                        {{/if}}
                     </div>
                 </div>
-                {{!-- </form> --}}
             </div>
         
         </div>
