add middleware on profile / some adjustement on css conflict

--- a/views/games/oneGame.hbs
+++ b/views/games/oneGame.hbs
@@ -20,7 +20,7 @@
                     <img src="/images/add-collection-icon.svg" alt="">
                     <p> ADD TO COLLECTION</p>
                 </div>
-                
+                {{!-- {{#if isLoggedIn}} --}}
                 {{!-- <form class="status-list" method="POST" action="/games/{{game._id}}"> --}}
                 <div class="status-list">
                     <div> 
@@ -37,6 +37,7 @@
                     </div>
                 </div>
                 {{!-- </form> --}}
+                {{!-- {{/if }} --}}
             </div>
         
         </div>
