--- a/public/stylesheets/card.css
+++ b/public/stylesheets/card.css
@@ -64,6 +64,7 @@ h4.card-title {
     font-size: 40px;
     line-height: 42px;
     margin-bottom: 18px;
+    text-transform: uppercase;
 }
 p{
     color: #fff;
