--- a/public/stylesheets/oneGame.css
+++ b/public/stylesheets/oneGame.css
@@ -140,9 +140,9 @@ p {
     display: none;
 }
 
-.status-list input {
+/* .status-list input {
     display: none;
-}
+} */
 
 .status-list > div {
     display: flex;
