--- a/views/error.hbs
+++ b/views/error.hbs
@@ -1,3 +1,13 @@
-<h1>{{message}}</h1>
-<h2>{{error.status}}</h2>
-<pre>{{error.stack}}</pre>
+{{!-- <h2>{{error.status}}</h2> --}}
+
+<main id="error-container">
+
+    <h1>looks like <br>we're lost.</h1>
+    <h2>it's not you, it's us. let's go back home</h2>
+
+    <div id="back-home-container">
+        <img src="/images/auth-arrow.svg" alt="">
+        <a href="/">go to the homepage</a>
+    </div>
+
+</main>
