--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,6 +4,7 @@
     <title>Power up 🎮</title>
     <link rel="icon" href="/images/powerup_favicon.ico" />
     <link rel='stylesheet' href='/stylesheets/allViews.css' />
+    <link rel='stylesheet' href='/stylesheets/error.css' />
     <link rel='stylesheet' href='/stylesheets/fonts.css' />
     <link rel='stylesheet' href='/stylesheets/nav-bar.css' />
     <link rel='stylesheet' href='/stylesheets/mod.message.css' />
