--- a/views/games/oneGame.hbs
+++ b/views/games/oneGame.hbs
@@ -13,7 +13,7 @@
         <div id="ratings-status">
             {{#if game.metacritic}}
             <div class="rating-block" >
-                <span class="rating">
+                <span class="rating" id="rating-one-game">
                     <p>{{game.metacritic}}</p>
                 </span>
                 <p>ON METACRITIC</p>
