--- a/public/stylesheets/oneGame.css
+++ b/public/stylesheets/oneGame.css
@@ -139,15 +139,10 @@ p {
     margin-right: 18px;
 }
 
-.rating {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+#rating-one-game {
+    position: relative;
     height: 40px;
     width: 40px;
-    background-color: #389A36;
-    border-radius: 8px;
-    margin-right: 15px;
 }
 
 #game-platforms p {
@@ -174,8 +169,7 @@ p {
 }
 
 #container-gallery-oneGame section{
-justify-content: center;
-
+    margin: 0 80px;
 }
 
 
