fixed detele link in settings

--- a/views/profile/settings.hbs
+++ b/views/profile/settings.hbs
@@ -34,7 +34,7 @@
 
     <div id="delete-container">
         <h3>delete your account</h3>
-        <a id="delete-link">
+        <a href="/profile/delete" id="delete-link">
             <img src="/images/auth-arrow.svg" alt="">
             <p href="/profile/delete">delete account</p>
         </a>
