fix font issue and NA results on metacritic + add playsinline on videoBG

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,5 @@
 {{!-- BGtest moins lourd en attendant le déploiement  --}}
-<video id="videoBG" autoplay muted loop>
+<video playsinline id="videoBG" autoplay muted loop>
     <source src="/images/BGtest.mp4" type="video/mp4">
 </video>
 
