--- a/views/profile/settings.hbs
+++ b/views/profile/settings.hbs
@@ -1,5 +1,5 @@
 
-<video id="videoBG" autoplay muted loop>
+<video playsinline id="videoBG" autoplay muted loop>
     <source src="/images/BGtest.mp4" type="video/mp4">
 </video>
 
