--- a/views/games/gamesCateg.hbs
+++ b/views/games/gamesCateg.hbs
@@ -10,10 +10,10 @@
     {{else}}
         <h2 id="result-for">results for: {{query}}</h2>
         <h1 id="result-search-title">Sorry, <br> no games <br> found</h1>
-        <a href="/">Back to homepage</a>
+        <div id="back-home">
+            <a id="back-home-bad-result" href="/">Back to homepage</a>
+            <img src="/images/auth-arrow.svg" alt="">
+        </div>
     {{/if}}
-
-
-
 
 </div>
