--- a/public/stylesheets/allGames.css
+++ b/public/stylesheets/allGames.css
@@ -1,9 +1,11 @@
-a {
+#back-home-bad-result {
     font-family: 'DIN Pro 400';
     color: rgba(192, 194, 245, 1);
-    font-size: 14px;
-    line-height: 16px;
-    text-decoration: none;
+    font-size: 20px;
+    line-height: 100%;
+    color: #F0F0FF;
+    text-transform: uppercase;
+    margin-right: 15px;
 }
 
 #result-for {
