--- a/public/stylesheets/auth.css
+++ b/public/stylesheets/auth.css
@@ -132,3 +132,21 @@ button img {
 button #sign-in-icon {
     width: 8px;
 }
+
+@media only screen and (max-width: 1040px) {
+    #signup-container {
+        top: 16%;
+        width: 80%;
+    }  
+}
+
+@media only screen and (max-width: 700px) {
+    #signup-container h1 {
+        font-size: 40px;
+        line-height: 84%;
+    }
+
+    form input {
+        width: 10%;
+    }
+}
