--- a/public/stylesheets/settings.css
+++ b/public/stylesheets/settings.css
@@ -149,4 +149,35 @@
 }
 
 
+@media only screen and (max-width: 1040px) {
+    #both-forms-containers {
+        flex-direction: column;
+    }
+
+    #username-form-container, #password-form-container {
+        width: 100%;
+        height: 100%;
+    }
+
+    #delete-container {
+        flex-direction: column;
+    }
+
+    #delete-container h3 {
+        margin-bottom: 56px;
+        text-align: start;
+        font-size: 30px;
+    }
+
+    #settings-container h3 {
+        font-size: 30px;
+    }
+
+    #settings-container h1 {
+        font-size: 55px;
+    }
+}
+
+
+
 
