small css fixes

--- a/public/stylesheets/allGames.css
+++ b/public/stylesheets/allGames.css
@@ -33,7 +33,7 @@
 }
 
 #card-container {
-    min-width: 300px;
-    margin: 0 28px 48px 0;
+    /* min-width: 300px; */
+    margin: 0 28px 28px 0;
 }
 
