--- a/public/stylesheets/nav-bar.css
+++ b/public/stylesheets/nav-bar.css
@@ -23,6 +23,16 @@
     border: 1px solid rgba(192, 194, 245, 0.3);
     background-color: rgba(255, 255, 255, 0.1);
 }
+
+#logo-navbar {
+    opacity: 0.4;
+    transition: all 0.2s ease-out;
+}
+
+#logo-navbar:hover {
+    opacity: 0.8;
+    transform: scale(1.04);
+}
   
 /* SMALL SEARCH BAR  */
 
