--- a/public/stylesheets/oneGame.css
+++ b/public/stylesheets/oneGame.css
@@ -1,7 +1,3 @@
-#left-col {
-    margin-right: 90px;
-}
-
 #background {
     position: absolute;
     top:0;
@@ -40,6 +36,10 @@ p {
 
 .split-dash:not(:last-of-type):after {
     content: '-';
+}
+
+#left-col {
+    margin-right: 70px;
 }
 
 #go-back-container {
@@ -186,7 +186,7 @@ p {
 
 .status-list {
     position: absolute;
-    top: 71px;
+    top: 56px;
     left: 0;
     width: 100%;
     background: rgba(18, 21, 46, 0.95);
@@ -222,6 +222,7 @@ p {
 #game-container aside {
     justify-self: center;
     grid-column: 7 / span 6;
+    z-index: -10;
 }
 
 #img-container {
