--- a/views/partials/navBar.hbs
+++ b/views/partials/navBar.hbs
@@ -1,6 +1,6 @@
 <header id="nav-bar">
     <a href="/">
-        <img src="/images/logo-icon.svg" alt="logo">
+        <img id="logo-navbar" src="/images/logo-icon.svg" alt="logo">
     </a>
     <div id="search-navbar">
 
